Add legal form to organization

--- a/config/locales/gems/enumerize/de.yml
+++ b/config/locales/gems/enumerize/de.yml
@@ -19,6 +19,7 @@ de:
         ohg: 'OHG'
         kg: 'KG'
         eg: 'eG'
+        state_entity: 'Staatliche Einrichtung'
         sonstige: 'Sonstige'
       umbrella:
         caritas: 'Caritas'
