better rails_admin i18n

--- a/config/locales/gems/rails_admin/de.yml
+++ b/config/locales/gems/rails_admin/de.yml
@@ -1,155 +1,131 @@
+# German rails_admin translation
+
 de:
   admin:
-    actions:
-      bulk_delete:
-        breadcrumb: Mehrere Objekte löschen
-        bulk_link: Markierte %{model_label_plural} löschen
-        menu: Mehrere Objekte löschen
-        title: "%{model_label_plural} löschen"
-      dashboard:
-        breadcrumb: "Übersicht"
-        menu: "Übersicht"
-        title: Seite administrieren
-      delete:
-        breadcrumb: Löschen
-        done: gelöscht
-        link: '"%{object_label}" löschen'
-        menu: Löschen
-        title: '%{model_label} "%{object_label}" löschen'
-      edit:
-        breadcrumb: Bearbeiten
-        done: geändert
-        link: "%{model_label} bearbeiten"
-        menu: Bearbeiten
-        title: '%{model_label} "%{object_label}" bearbeiten'
-      export:
-        breadcrumb: Exportieren
-        bulk_link: Markierte %{model_label_plural} exportieren
-        done: exportiert
-        link: Gefundene %{model_label_plural} exportieren
-        menu: Exportieren
-        title: "%{model_label_plural} exportieren"
-      history_index:
-        breadcrumb: Verlauf
-        menu: Verlauf
-        title: Verlauf für %{model_label_plural}
-      history_show:
-        breadcrumb: Verlauf
-        menu: Verlauf
-        title: Verlauf für %{model_label} "%{object_label}"
-      index:
-        breadcrumb: "%{model_label_plural}"
-        menu: Liste
-        title: Liste von %{model_label_plural}
-      new:
-        breadcrumb: Neu
-        done: erstellt
-        link: "%{model_label} neu hinzufügen"
-        menu: Neu hinzufügen
-        title: "%{model_label} erstellen"
-      show:
-        breadcrumb: "%{object_label}"
-        menu: Anzeigen
-        title: Details für %{model_label} "%{object_label}"
-      show_in_app:
-        menu: In Applikation anzeigen
-    export:
-      click_to_reverse_selection: Klicken um die Markierung aufzuheben
-      confirmation: Exportieren nach %{name}
-      csv:
-        col_sep: Spaltentrennzeichen
-        col_sep_help: Lassen für Standardwert ('%{value}')
-        default_col_sep: ","
-        encoding_to: Kodieren zu
-        encoding_to_help: 'Zielkodierung wählen. Leer lassen, um aktuelle Eingangskodierung zu übernehmen: (%{name})'
-        header_for_association_methods: "%{name} [%{association}]"
-        header_for_root_methods: "%{name}"
-        skip_header: Keine Kopfzeile
-        skip_header_help: Keine Kopfzeile erstellen (keine Spaltenbeschreibungen)
-      display: 'Anzeigen von %{name}: %{type}'
-      empty_value_for_associated_objects: "<leer>"
-      fields_from: Spalten von %{name}
-      fields_from_associated: Zugehörige Spalten von %{name}
-      options_for: Optionen für %{name}
-      select: Spalten zum Exportieren auswählen
-      select_all_fields: Alle Felder markieren
-    flash:
-      error: Fehler beim %{action} von %{name}
-      model_not_found: Modell "%{model}" konnte nicht gefunden werden
-      noaction: Es wurden keine Änderungen ausgeführt
-      object_not_found: '%{model} mit id "%{id}" konnte nicht gefunden werden'
-      successful: "%{name} erfolgreich %{action}"
-    form:
-      all_of_the_following_related_items_will_be_deleted: "? Folgende zugehörige Ojekte werden gelöscht:"
-      are_you_sure_you_want_to_delete_the_object: "%{model_name} sicher löschen"
-      basic_info: Grundlegende Informationen
-      bulk_delete: 'Die folgenden Objekte werden gelösche, zugehörige Objekte werden gelöscht oder können übrig bleiben:'
-      cancel: Abbrechen
-      char_length_of: Länge
-      char_length_up_to: Länge bis zu
-      confirmation: Ja, ich bin sicher
-      new_model: "%{name} (neu)"
-      one_char: Zeichen
-      optional: optional
-      required: Pflichtfeld
-      save: Speichern
-      save_and_add_another: Speichern und neu hinzufügen
-      save_and_edit: Speichern und bearbeiten
     home:
-      name: Home
-    js:
-      between_and_: Zwischen ... und ...
-      contains: Enthält
-      date: Datum ...
-      ends_with: Endet mit
-      'false': true
-      is_blank: Ist leer
-      is_exactly: Ist genau
-      is_present: existiert
-      last_week: Letzte Woche
-      number: Nummer ...
-      starts_with: Beginnt mit
-      this_week: Diese Woche
-      today: Heute
-      'true': true
-      yesterday: Gestern
-    loading: Lade...
+      name: "Home"
+    pagination:
+      previous: "&laquo; Vor"
+      next: "Zurück &raquo;"
+      truncate: "…"
     misc:
-      add_filter: Filter hinzufügen
-      add_new: Neu hinzufügen
-      ago: vor
-      bulk_menu_title: Markierte Elemente
-      chose_all: Alle auswählen
-      chosen: "%{name} in Auswahl"
-      clear_all: Alles zurücksetzen
-      down: Runter
-      filter: Filter
-      filter_date_format: mm/tt/jj
-      log_out: Abmelden
-      navigation: Navigation
-      navigation_static_label: Verlinkungen
-      refresh: Neu laden
-      remove: Löschen
-      search: Suchen
-      show_all: Alles anzeigen
-      up: Hoch
-    pagination:
-      next: Vor &raquo;
-      previous: "&laquo; Zurück"
-      truncate: "..."
+      filter_date_format: "dd.mm.yy" # a combination of 'dd', 'mm' and 'yy' with any delimiter. No other interpolation will be done!
+      search: "Suche"
+      filter: "Filter"
+      refresh: "Aktualisieren"
+      show_all: "Alles anzeigen"
+      add_filter: "Filter hinzufügen"
+      bulk_menu_title: "Ausgewählte Elemente"
+      remove: "Entfernen"
+      add_new: "Neu anlegen"
+      chosen: "%{name} auswählen"
+      chose_all: "Alle auswählen"
+      clear_all: "Alle löschen"
+      up: "Hoch"
+      down: "Runter"
+      navigation: "Navigation"
+      log_out: "Abmelden"
+      ago: "her"
+    flash:
+      successful: "%{name} wurde erfolgreich %{action}"
+      error: "%{name} wurde nicht %{action}"
+      noaction: "Keine Aktion ausgewählt"
+      model_not_found: "Model '%{model}' wurde nicht gefunden"
+      object_not_found: "%{model} mit Id '%{id}' wurde nicht gefunden"
     table_headers:
+      model_name: "Modellname"
+      last_used: "zuletzt benutzt"
+      records: "Datensatz"
+      username: "Nutzer"
       changes: "Änderungen"
-      created_at: Datum/Zeit
-      item: Element
-      last_used: Zuletzt verwendet
-      message: Nachricht
-      model_name: Modellname
-      records: Datensätze
-      username: Anwender
-  home:
-    name: Start
-  views:
-    pagination:
-      next: Vor &raquo;
-      previous: "&laquo; Zurück"
-      truncate: "..."
+      created_at: "Datum/uhrzeit"
+      item: "Element"
+      message: "Meldung"
+    actions:
+      dashboard:
+        title: "Administration"
+        menu: "Übersicht"
+        breadcrumb: "Übersicht"
+      index:
+        title: "%{model_label_plural}"
+        menu: "Liste"
+        breadcrumb: "%{model_label_plural}"
+      show:
+        title: "Details für %{model_label} '%{object_label}'"
+        menu: "Anzeigen"
+        breadcrumb: "%{object_label}"
+      show_in_app:
+        menu: "Anzeigen in App"
+      new:
+        title: "Hinzufügen %{model_label}"
+        menu: "Neu hinzufügen"
+        breadcrumb: "Hinzufügen"
+        link: "%{model_label} hinzufügen"
+        done: "hinzugefügt"
+      edit:
+        title: "%{model_label} '%{object_label}' bearbeiten"
+        menu: "Bearbeiten"
+        breadcrumb: "Bearbeiten"
+        link: "%{model_label} bearbeiten"
+        done: "aktualisiert"
+      delete:
+        title: "%{model_label} '%{object_label}' löschen"
+        menu: "Löschen"
+        breadcrumb: "Löschen"
+        link: "'%{object_label}' löschen"
+        done: "gelöscht"
+      bulk_delete:
+        title: "Löschen %{model_label_plural}"
+        menu: "Mehrere löschen"
+        breadcrumb: "Mehrere löschen"
+        bulk_link: "Löschen der ausgewählten %{model_label_plural}"
+      export:
+        title: "%{model_label_plural} exportieren"
+        menu: "Exportieren"
+        breadcrumb: "Exportieren"
+        link: "Export gefundener %{model_label_plural}"
+        bulk_link: "Export ausgewählter %{model_label_plural}"
+        done: "exportiert"
+      history_index:
+        title: "Historie von %{model_label_plural}"
+        menu: "Historie"
+        breadcrumb: "Historie"
+      history_show:
+        title: "Historie von %{model_label} '%{object_label}'"
+        menu: "Historie"
+        breadcrumb: "Historie"
+    form:
+      cancel: "Abbrechen"
+      basic_info: "Grundlegende Informationen"
+      required: "Erforderlich"
+      optional: "Optional"
+      one_char: "Zeichen"
+      char_length_up_to: "Länge bis zu"
+      char_length_of: "Länge von"
+      save: "Speichern"
+      save_and_add_another: "Speichern und einen weiteren hinzufügen"
+      save_and_edit: "Speichern und bearbeiten"
+      all_of_the_following_related_items_will_be_deleted: "? Alle der folgenden, zugehörigen Positionen werden gelöscht:"
+      are_you_sure_you_want_to_delete_the_object: "Wollen Sie %{model_name} wirklich löschen"
+      confirmation: "Ja, ich bin sicher"
+      bulk_delete: "Die folgenden Objekte werden gelöscht:"
+      new_model: "%{name} (neu)"
+    export:
+      confirmation: "Exportiere nach %{name}"
+      select: "Wählen Sie zu exportierende Spalten aus"
+      fields_from: "Spalten von %{name}"
+      fields_from_associated: "Zugehörige Spalten von %{name}"
+      display: "%{name}: %{type}"
+      options_for: "Optionen für %{name}"
+      empty_value_for_associated_objects: "<leer>"
+      click_to_reverse_selection: 'Anklicken um die Auswahl umzukehren'
+      csv:
+        header_for_root_methods: "%{name}" # 'model' ist verfügbar
+        header_for_association_methods: "%{name} [%{association}]"
+        encoding_to: "Zielkodierung"
+        encoding_to_help: "Kodierung der Ausgabe wählen. Unverändert lassen, um die aktuelle Kodierung beizubehalten: %{name}"
+        skip_header: "Kein Header"
+        skip_header_help: "Auf Attributbeschreibung im Header verzichten"
+        default_col_sep: ","
+        col_sep: "Spalten-Separator"
+        col_sep_help: "Trennzeichen für Spaltenwerte festlegen. Unverändert lassen für Standardwert ('%{value}')" # value is default_col_sep
