--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -22,3 +22,10 @@ de:
       user:
         one: Nutzer
         other: Nutzer
+  i18n:
+    transliterate:
+      rule:
+        ä: "ae"
+        ö: "oe"
+        ü: "ue"
+        ß: "ss"
