factoring and refactoring factories

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -35,8 +35,8 @@ en:
         one: Federal State
         other: Federal States
       language:
-        one: language
-        other: languages
+        one: Language
+        other: Languages
       opening:
         one: Opening Hours
         other: Opening Hours
