lots of little admin backend features

--- a/config/locales/gems/rails_admin/de.yml
+++ b/config/locales/gems/rails_admin/de.yml
@@ -98,6 +98,10 @@ de:
         title: "Statistiken für %{model_label_plural}"
         menu: 'Statistiken'
         breadcrumb: 'Statistiken'
+      clone:
+        title: "%{model_label} '%{object_label}' duplizieren"
+        menu: 'Duplizieren'
+        breadcrumb: 'Duplizieren'
     form:
       cancel: "Abbrechen"
       basic_info: "Grundlegende Informationen"
