--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -32,6 +32,9 @@ de:
         ö: "oe"
         ü: "ue"
         ß: "ss"
+  views:
+    pagination:
+      truncate: '…'
   conf: # translations used for app-internal things
     current_location: 'Mein Standort'
     default_location: 'Berlin'
