js -> coffeescript refactoring

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -53,3 +53,4 @@ de:
   js:
     update_request_success: 'Vielen Dank, wir haben deine Nachricht erhalten. Sobald wir in deiner Nähe aktiv werden melden wir uns bei dir.'
     obfuscated_email: 'Diese E-Mail-Adresse wird zum Spam-Schutz durch JavaScript verschlüsselt. Bitte aktiviere JavaScript um sie lesen zu können.'
+    navigate_to_tags: 'Zum Schlagwortfilter'
