--- a/config/locales/flashes/de.yml
+++ b/config/locales/flashes/de.yml
@@ -2,3 +2,7 @@ de:
   flash:
     contact:
       success: 'Die Nachricht wurde erfolgreich abgeschickt.'
+    update_request:
+      success: 'Vielen Dank, wir haben deine Nachricht erhalten. Sobald wir in deiner Nähe aktiv werden melden wir uns bei dir.'
+    report:
+      success: 'Vielen Dank, wir haben deine Nachricht erhalten und werden sie umgehend prüfen.'
