--- a/config/locales/validations/de.yml
+++ b/config/locales/validations/de.yml
@@ -3,6 +3,15 @@ de:
     offer:
       location_fits_organization:
         organization_error: |
-          muss der des angegebenen Standorts gleichen.
+          muss die des angegebenen Standorts beinhalten.
         location_error: |
           muss zu der unten angegebenen Organisation gehören.
+      needs_main_tag: benötigt mindestens einen Haupt-Tag
+      needs_organization: benötigt mindestens eine Organisation
+      only_approved_organizations: |
+        darf nur bestätigte Organisationen beinhalten, bevor dieses Angebot
+        bestätigt werden kann. Unbestätigt: %{list}.
+    shared:
+      approved_by_creator: kann nicht von dem/der Ersteller/in gesetzt werden
+      incomplete: |
+        kann nicht angehakt werden, wenn nicht auch "Completed" gesetzt ist
