--- a/config/locales/organizations/de.yml
+++ b/config/locales/organizations/de.yml
@@ -4,3 +4,5 @@ de:
       who: Wer
       where: Wo
       offers_all: Alle Angebote der Organisation
+      map_output_searchresult: Kartenausgabe
+      cta_report_errors: Sind die hier dargestellten Informationen fehlerhaft oder unvollständig, lass es uns bitte wissen!
