--- a/config/locales/pages/de.yml
+++ b/config/locales/pages/de.yml
@@ -1,5 +1,6 @@
 de:
   pages:
+
     home:
       title: Unterstützungsangebote für Kinder, Jugendliche und Familien
       section:
@@ -26,3 +27,50 @@ de:
       description: |
         Bitte nutze den Zurück-Knopf deines Browsers und versuche es mit einem
         anderen Link oder probiere es mit der Suchfunktion.
+
+    agb:
+      title: Rechtliche Hinweise
+      text: |
+        Diese Webseite wurde mit größtmöglicher Sorgfalt erstellt. Die Benckiser Stiftung Zukunft
+        („clarat“ oder „wir“) übernimmt jedoch keine Gewähr in Bezug auf die Vollständigkeit, die
+        Aktualität, die Verfügbarkeit sowie die Richtigkeit der auf dieser Webseite angebotenen
+        Informationen und Links. Die Webseite ist ausschließlich für den privaten Gebrauch bestimmt,
+        eine Nutzung zu eigenen kommerziellen Zwecken ist unzulässig.
+
+        Wir weisen vorsorglich darauf hin, dass die Informationen auf der Webseite Ungenauigkeiten
+        und Fehler enthalten können und dass eine Haftung für solche Ungenauigkeiten oder Fehler
+        grundsätzlich ausgeschlossen ist. Wir weisen ferner ausdrücklich darauf hin, dass es in
+        Ihrer eigenen Verantwortung liegt, sicherzustellen, dass die Serviceleistungen oder
+        Informationen, die Sie über unsere Webseite beziehen, Ihren speziellen Anforderungen
+        genügen. Die Informationen auf unserer Webseite stellen keine rechtlichen Zusicherungen dar und es können aus ihnen keine Rechtsansprüche abgeleitet werden.
+
+        Die Webseite kann jederzeit ohne Benachrichtigung geändert werden.
+
+        Die Inhalte der Webseite wurden von oder für clarat erstellt. Das Urheberrecht und sonstige
+        Schutzrechte an den Inhalten unserer Webseite stehen clarat oder demjenigen zu, der uns daran
+        Nutzungsrechte eingeräumt hat. Dies bezieht sich unter anderem, aber nicht ausschließlich,
+        auf das Design, das Layout, die Texte sowie Abbildungen, Bilder und Grafiken. Wir
+        widersprechen einer vollständigen oder teilweisen Speicherung, Vervielfältigung und/oder
+        Veröffentlichung und behalten uns rechtliche Schritte vor, sofern eine solche ohne unsere
+        Genehmigung erfolgt.
+
+        Soweit auf andere Domains oder Webseiten hingewiesen oder mittels eines Hyperlinks verlinkt
+        wird, sind wir für den Inhalt solcher Webseiten nicht verantwortlich, übernehmen dafür
+        keine Gewähr und machen uns den Inhalt solcher Webseiten nicht zu Eigen.
+
+        Die rechtlichen Hinweise auf dieser Webseite sowie alle Fragen und Streitigkeiten im
+        Zusammenhang mit dieser Webseite unterliegen dem Recht der Bundesrepublik Deutschland.
+
+    faq:
+      title: FAQ
+
+    privacy:
+      title: Privacy Policy
+
+    impressum:
+      title: Impressum
+
+    about:
+      title: Über uns
+
+
