Add ASB to umbrella organizations

--- a/config/locales/gems/enumerize/de.yml
+++ b/config/locales/gems/enumerize/de.yml
@@ -27,4 +27,5 @@ de:
         awo: 'Arbeiterwohlfahrt'
         dpw: 'Deutscher Paritätischer Wohlfahrtsverband'
         drk: 'Deutsches Rotes Kreuz'
+        asb: 'Arbeiter-Samariter-Bund'
         zwst: 'Zentralwohlfahrtsstelle der Juden in Deutschland'
