--- a/config/locales/gems/enumerize/en.yml
+++ b/config/locales/gems/enumerize/en.yml
@@ -26,4 +26,5 @@ en:
         awo: 'Arbeiterwohlfahrt'
         dpw: 'Deutscher Paritätischer Wohlfahrtsverband'
         drk: 'Deutsches Rotes Kreuz'
+        asb: 'Arbeiter-Samariter-Bund'
         zwst: 'Zentralwohlfahrtsstelle der Juden in Deutschland'
