add administration for categories and facet count display

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -10,6 +10,9 @@ de:
       organization:
         one: Organisation
         other: Organisationen
+      category:
+        one: Kategorie
+        other: Kategorien
       federal_state:
         one: Bundesland
         other: Bundesländer
