--- a/config/locales/validations/en.yml
+++ b/config/locales/validations/en.yml
@@ -13,3 +13,4 @@ en:
     shared:
       approved_by_creator: can't be approved by creator
       incomplete: must be completed before approval
+      max_count: can't be more than %{max}.
