Implement top banner indicating testing phase

--- a/config/locales/shared/de.yml
+++ b/config/locales/shared/de.yml
@@ -20,3 +20,6 @@ de:
         second_row: Unterstützungsangebote für Kinder, Jugendliche und Familien
     distributor:
       sections_headline: Oder suche nach Kategorien
+    banner:
+      text: Achtung, clarat.org befindet sich noch im Aufbau!
+      link: mehr erfahren ›
