--- a/config/locales/offers/de.yml
+++ b/config/locales/offers/de.yml
@@ -7,6 +7,8 @@ de:
         Berlin. Wir hoffen aber schon bald auch in anderen Teilen
         Deutschlands aktiv zu sein. Hinterlasse uns doch bitte Deine E-Mail
         und wir werden uns einmalig bei dir melden sobald das der Fall ist.
+      location_fallback: |
+        Du hast keinen Ort angegeben, deswegen (ver)suchen wir's in Berlin.
       cooperation: Kooperationsprojekt
       map_output_searchresults: Kartenausgabe der Suchergebnisse
       location_everywhere: Überall erreichbar, egal, wo du bist
