finish basic functionality of #112 - working contact people

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -41,6 +41,9 @@ de:
       website:
         one: Webseite
         other: Webseiten
+      contact_person:
+        one: 'Kontaktperson'
+        other: 'Kontaktpersonen'
       hyperlink:
         one: Hyperlink
         other: Hyperlinks
