Change wording for #168

--- a/config/locales/organizations/de.yml
+++ b/config/locales/organizations/de.yml
@@ -1,8 +1,8 @@
 de:
   organizations:
     show:
-      who: Wer
+      who: Wer hilft dir?
       where: Wo
-      offers_all: Alle Angebote der Organisation
+      offers_all: Welche Hilfe bietet diese Organisation?
       map_output_searchresult: Kartenausgabe
       cta_report_errors: Sind die hier dargestellten Informationen fehlerhaft oder unvollständig, lass es uns bitte wissen!
