Tiny wording change.

--- a/config/locales/offers/de.yml
+++ b/config/locales/offers/de.yml
@@ -18,7 +18,7 @@ de:
       what: Worum gehts?
       where: Wo
       assigned_categories: Zugeordnete Kategorien
-      next_steps: Was musst du nun tun?
+      next_steps: Was musst du tun?
       opening_hours: Wann kannst du dich melden?
       opening_by_arrangement: Nach Vereinbarung
       contact:
