--- a/config/locales/validations/de.yml
+++ b/config/locales/validations/de.yml
@@ -6,7 +6,9 @@ de:
           muss die des angegebenen Standorts beinhalten.
         location_error: |
           muss zu der unten angegebenen Organisation gehören.
-      needs_organization: benötigt mindestens eine Organisation
+      needs_organizations: benötigt mindestens eine Organisation
+      needs_encounter_filters: benötigt mindestens einen Kontaktfilter
+      needs_age_filters: benötigt mindestens einen Altersfilter
       only_approved_organizations: |
         darf nur bestätigte Organisationen beinhalten, bevor dieses Angebot
         bestätigt werden kann. Unbestätigt: %{list}.
