--- a/config/locales/validations/de.yml
+++ b/config/locales/validations/de.yml
@@ -20,3 +20,4 @@ de:
       incomplete: |
         kann nicht angehakt werden, wenn nicht auch "Completed" gesetzt ist
       max_count: dürfen nicht mehr als %{max} sein.
+      later_date: muss mindestens einen Tag in der Zukunft liegen
