--- a/config/locales/validations/en.yml
+++ b/config/locales/validations/en.yml
@@ -19,3 +19,4 @@ en:
       approved_by_creator: can't be approved by creator
       incomplete: must be completed before approval
       max_count: can't be more than %{max}.
+      later_date: must be at or after tomorrow
