finish #181 - also add error reporting to organization show

--- a/config/locales/shared/de.yml
+++ b/config/locales/shared/de.yml
@@ -23,3 +23,7 @@ de:
     banner:
       text: Achtung, clarat.org befindet sich noch im Aufbau!
       link: mehr erfahren ›
+    show:
+      cta_report_errors: |
+        Sind die hier dargestellten Informationen fehlerhaft oder unvollständig,
+        lass es uns bitte wissen!
