--- a/config/locales/shared/de.yml
+++ b/config/locales/shared/de.yml
@@ -21,8 +21,15 @@ de:
     distributor:
       sections_headline: Oder suche nach Kategorien
     banner:
-      text: Achtung, clarat.org befindet sich noch im Aufbau!
-      link: mehr erfahren ›
+      text: clarat.org wird gerade aufgebaut.
+      link: Hier erfährst Du mehr
+      beta_modal: |
+        Unsere Internetseite clarat.org ist noch ganz neu. Für Berlin kannst du
+        schon viele Hilfsangebote finden. Als nächstes sammeln wir Hilfsangebote
+        für Brandenburg. Dann auch für andere Bundesländer. Über deine Hilfe
+        freuen wir uns: Hast du etwas gesehen, das wir besser machen können?
+        Oder funktioniert etwas nicht richtig? Dann
+      beta_modal_contact_link: schreibe uns einfach eine Nachricht.
     show:
       cta_report_errors: |
         Sind die hier dargestellten Informationen fehlerhaft oder unvollständig,
