Hotfix: Change "jump to categories" wording in mobile

--- a/config/locales/offers/de.yml
+++ b/config/locales/offers/de.yml
@@ -12,7 +12,7 @@ de:
       cooperation: Kooperationsprojekt
       map_output_searchresults: Kartenausgabe der Suchergebnisse
       location_everywhere: Überall erreichbar, egal, wo du bist
-      navigate_to_categories: 'Filtern…'
+      navigate_to_categories: 'Kategorien'
 
     show:
       what: Worum gehts?
