fix merge further

--- a/config/locales/offers/de.yml
+++ b/config/locales/offers/de.yml
@@ -13,7 +13,7 @@ de:
       map_output_searchresults: Kartenausgabe der Suchergebnisse
       location_everywhere: Überall erreichbar, egal, wo du bist
       navigate_to_categories: 'Kategorien'
-
+      main_categories: Hauptkategorien
     show:
       what: Worum gehts?
       where: Wo
